@@ -6,3 +6,4 @@
 16-Apr-2021 - V0.14 Report unreleased BIRD entries
  5-May-2021 - V0.15 Update dependencies
 20-May-2021 - V0.16 Adding preliminary CurrentHoldings, UnreleasedHoldings and RemovedHoldings provider modules and tests
+31-Jul-2021 - V0.17 Add scan for chemical component release date
